--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             background-color: #45a049;
         }
 
-        .tag-container {
+        /* .tag-container {
             text-align: center;
             margin-top: 10px;
         }
@@ -150,6 +150,23 @@
             padding: 5px 10px;
             background-color: #f2f2f2;
             color: #888;
+            cursor: pointer;
+        } */
+
+        .tags-container {
+            display: flex;
+            justify-content: flex-end;
+            flex-wrap: wrap;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .tag {
+            background-color: #eaeaea;
+            padding: 5px 10px;
+            margin: 5px;
+            border-radius: 20px;
+            font-size: 14px;
             cursor: pointer;
         }
 
