--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         .tags-container {
             display: flex;
-            justify-content: right;
+            justify-content: flex-end;
             flex-wrap: wrap;
             margin-top: 20px;
             margin-bottom: 20px;
@@ -257,7 +257,7 @@
         // Declare global variables
         var books = []; // Array to store all books
         var currentPage = 1; // Current page number
-        var booksPerPage = 9; // Number of books to display per page
+        var booksPerPage = 6; // Number of books to display per page
         var tagList = []; // Array to store unique tags
 
         // Send a GET request to fetch the JSON data
@@ -272,6 +272,7 @@
 
             // Display books and render pagination
             displayBooks(currentPage, books);
+            handleTagClick('All');
             renderPagination();
             renderTags();
         } else {
@@ -316,7 +317,6 @@
                 tagContainer.appendChild(tagElement);
             });
         }
-
 
         // Function to handle tag click event
         function handleTagClick(tag) {
