--- a/index.html
+++ b/index.html
@@ -153,20 +153,21 @@
             cursor: pointer;
         } */
 
-        .tags-container {
+        .tag-container {
+            text-align: left; /* Align tags to the left */
+            margin-top: 10px;
             display: flex;
-            justify-content: flex-end;
             flex-wrap: wrap;
-            margin-top: 20px;
-            margin-bottom: 20px;
+            justify-content: flex-start; /* Align tags to the start */
         }
 
         .tag {
-            background-color: #eaeaea;
+            display: inline-block;
+            margin-right: 10px;
+            margin-bottom: 10px; /* Add margin bottom for spacing */
             padding: 5px 10px;
-            margin: 5px;
-            border-radius: 20px;
-            font-size: 14px;
+            background-color: #f2f2f2;
+            color: #888;
             cursor: pointer;
         }
 
