--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
             padding: 20px;
         }
 
+        .left {
+            /* Left column styles... */
+            position: relative;
+        }
+
+        .center {
+            /* Center column styles (books display) */
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .right {
+            /* Right column styles (tags) */
+            position: relative;
+        }
+
+        .side-panel {
+            position: sticky; /* Make the side panel sticky */
+            top: 20px; /* Adjust the top position as needed */
+            background-color: #f2f2f2;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
         h1 {
             text-align: center;
             margin-bottom: 30px;
