--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>eBook Library</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5K9XMQBLM0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -35,7 +34,7 @@
 
         .left {
             width: 25%;
-            position: fixed;
+            position: relative;
             padding: 20px;
         }
 
@@ -89,7 +88,6 @@
             text-transform: uppercase;
             letter-spacing: 2px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-            position: relafixed;
         }
 
         .search-container {
@@ -97,7 +95,6 @@
             padding: 10px;
             margin-bottom: 20px;
             text-align: center;
-            position: fixed;
         }
 
         .search-container::before {
