--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
+            background-color: #fff;
         }
 
         .container {
@@ -254,9 +255,9 @@
         .footer {
             text-align: center;
             margin-top: 30px;
-            /* color: #888; */
-            background-color: #333333;
-            color: white;
+            color: #888;
+            /* background-color: #333333;
+            color: white; */
         }
 
         .heart {
