--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="left-panel left">
+            <!-- <div class="left-panel left">
                 <div class="logo">
                     <img src="favicon.ico" alt="Logo">
                 </div>
@@ -45,7 +45,7 @@
                         <!-- Quote will be dynamically added here -->
                     </blockquote>
                 </div>
-            </div>
+            </div> -->
             
 
             <div class="center">
