--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="quote">
                     
                     <blockquote id="random-quote">
-                        <!-- Quote will be dynamically added here -->
+                        <!-- Quote will be dynamically added here
                     </blockquote>
                 </div>
             </div> -->
