--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="container">
-            <!-- <div class="left-panel left">
+            <div class="left-panel left">
                 <div class="logo">
                     <img src="favicon.ico" alt="Logo">
                 </div>
@@ -42,10 +42,10 @@
                 <div class="quote">
                     
                     <blockquote id="random-quote">
-                        <!-- Quote will be dynamically added here
+                        <!-- Quote will be dynamically added here -->
                     </blockquote>
                 </div>
-            </div> -->
+            </div>
             
 
             <div class="center">
