--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
             </div>
             
         </div>
+
+
+        <script>
+            // Attach the event listener to the search input field
+            var searchInput = document.getElementById("searchInput");
+            searchInput.addEventListener('input', handleSearchInput);
+        </script>
         
     </body>
 </html>
