--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 
                 <div class="search-container">
                     <input type="text" id="searchInput" class="search-input" placeholder="Search for a book...">
-                    <button class="search-button" onclick="searchBooks()">Search</button>
+                    <button class="search-button" onclick="handleSearchInput()">Search</button>
                 </div>
 
                 <div id="bookList">
