--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     </script> -->
                 </div>
                 <div class="quote">
-                    
-                    <blockquote id="random-quote">
+                    <div class="quote-label">Quote of the day:</div>
+                    <div id="random-quote">
                         <!-- Quote will be dynamically added here -->
-                    </blockquote>
+                    </div>
                 </div>
             </div>
             
@@ -71,7 +71,7 @@
             </div>
 
 
-            <div class="right side-panel">
+            <div class="right right-panel">
                 <span class="tag-label">Tags:</span>
                 <div class="tag-container">
                     <div class="tag active" onclick="filterByTag(this)">All</div>
