--- a/index.html
+++ b/index.html
@@ -22,23 +22,18 @@
                 <div class="logo">
                     <img src="favicon.ico" alt="Logo">
                 </div>
-                <div class="links">
-                    <a href="https://github.com"><img src="github-logo.png" alt="GitHub"></a>
-                    <a href="https://instagram.com"><img src="instagram-logo.png" alt="Instagram"></a>
-                    <a href="https://youtube.com"><img src="youtube-logo.png" alt="YouTube"></a>
-                </div>
+
+                <div class="social-media">
+                    <a href="https://github.com/Divinemonk/" target="_blank"><img src="images/github.png" alt="Github"></a>
+                    <a href="https://instagram.com/hrdivinemonk/" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+                    <a href="https://youtube.com/@hrdivinemonk/" target="_blank"><img src="images/youtube.png" alt="Youtube"></a>
+                    <a href="https://twitter.com/hrdivinemonk/" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
+                </div> 
+
                 <div class="ad-column">
-                    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <ins class="adsbygoogle"
-                        style="display:block"
-                        data-ad-client="YOUR-ADSENSE-CLIENT-ID"
-                        data-ad-slot="YOUR-ADSENSE-AD-SLOT"
-                        data-ad-format="auto"
-                        data-full-width-responsive="true"></ins>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script> -->
+                    <!-- Advertisements will be dynamically added here -->
                 </div>
+
                 <div class="quote">
                     <div class="quote-label">Quote of the day:</div>
                     <div id="random-quote">
@@ -46,6 +41,7 @@
                     </div>
                 </div>
             </div>
+        
             
 
             <div class="center">
