--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="container">
             <div class="left-panel left">
                 <div class="social-media">
+                    <h3>Follow us on:</h3>
                     <a href="https://github.com/Divinemonk/" target="_blank"><img src="images/github.png" alt="Github"></a>
                     <a href="https://instagram.com/hrdivinemonk/" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
                     <a href="https://youtube.com/@hrdivinemonk/" target="_blank"><img src="images/youtube.png" alt="Youtube"></a>
