--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="left-panel left">
                 <div class="social-media">
                     <h3>Follow us on:</h3>
-                    <div id="g"><a href="https://github.com/Divinemonk/" target="_blank"><img src="images/github.png" alt="Github"></a></div>
-                    <div id="i"><a href="https://instagram.com/hrdivinemonk/" target="_blank"><img src="images/instagram.png" alt="Instagram"></a></div>
-                    <div id="y"><a href="https://youtube.com/@hrdivinemonk/" target="_blank"><img src="images/youtube.png" alt="Youtube"></a></div>
-                    <div id="t"><a href="https://twitter.com/hrdivinemonk/" target="_blank"><img src="images/twitter.png" alt="Twitter"></a></div>
+                    <div id="g"><a href="https://github.com/Divinemonk/" target="_blank">Github</a></div>
+                    <div id="i"><a href="https://instagram.com/hrdivinemonk/" target="_blank">Instagram</a></div>
+                    <div id="y"><a href="https://youtube.com/@hrdivinemonk/" target="_blank">Youtube</a></div>
+                    <div id="t"><a href="https://twitter.com/hrdivinemonk/" target="_blank">Twitter</a></div>
                 </div>
                 <div class="quote">
                     <div class="quote-label">Quote of the day:</div>
